--- a/src/main/resources/html/service_purchase.html
+++ b/src/main/resources/html/service_purchase.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>ViewCoder优惠码到账提醒</title>
+    <title>ViewCoder套餐购置成功提醒</title>
 </head>
 <body>
 <style>
