--- a/src/main/resources/html/service_expire.html
+++ b/src/main/resources/html/service_expire.html
@@ -43,7 +43,7 @@
 
         <!--  基础文本组件:Text_14   Common_Text frame:Text_14  -->
         <span id="14" name="Text_14"
-              style="position: absolute;top: 73px; left: 18px; width: 148px; height: 31px; z-index:14; opacity:1; visibility: visible; font-size: 14px; font-weight: normal; font-family: microsoft yahei; font-style: normal; color: rgba(125,125,125,1.0); text-decoration: none; line-height: 150%; text-align: left; ">尊敬的: <span style="color: rgba(34,142,231,1.0)">${name}</span></span>
+              style="position: absolute;top: 73px; left: 18px; height: 31px; z-index:14; opacity:1; visibility: visible; font-size: 14px; font-weight: normal; font-family: microsoft yahei; font-style: normal; color: rgba(125,125,125,1.0); text-decoration: none; line-height: 150%; text-align: left; ">尊敬的: <span style="color: rgba(34,142,231,1.0)">${name}</span></span>
 
         <!--  基础文本组件:Text_15   Common_Text frame:Text_15  -->
         <span id="15" name="Text_15"
