email link domain name

--- a/src/main/resources/html/service_expire.html
+++ b/src/main/resources/html/service_expire.html
@@ -18,23 +18,23 @@
          style="line-height: normal; white-space:normal; display: inline-block; position: relative; width:616px;height:780px;background: rgba(255,255,255,1);">
         <!----------------Widgets render begin 组件渲染开始--------------------><!-- Common组件渲染 -->
         <!--  基础图片框:Image_30   Common_Image frame:Image_30  -->
-        <img id="30" name="Image_30" src="http://viewcoder.beansonbar.cn/upload_files/1534073596711.png"
+        <img id="30" name="Image_30" src="http://resourcevc.liphin.com/upload_files/1534073596711.png"
              style="position: absolute;top: 485px; left: 7px; width: 30px; height: 48px; z-index:30; opacity:1; visibility: visible; border-color:rgba(100,100,100,0.4); border-style: solid; border-width: 0px 0px 0px 0px; border-radius: 0px 0px 0px 0px;">
 
         <!--  基础文本组件:Text_6   Common_Text frame:Text_6  -->
-        <a href="http://beansonbar.com" id="6" name="Text_6"
+        <a href="http://viewcoder.liphin.com" id="6" name="Text_6"
               style="cursor: pointer;position: absolute;top: 13px; left: 302px; width: 54px; height: 31px; z-index:6; opacity:1; visibility: visible; font-size: 14px; font-weight: normal; font-family: microsoft yahei; font-style: normal; color: rgba(255,255,255,1.0); text-decoration: none; line-height: 150%; text-align: left; ">首页</a>
 
         <!--  基础文本组件:Text_7   Common_Text frame:Text_7  -->
-        <a href="http://beansonbar.com/#/project/my" id="7" name="Text_7"
+        <a href="http://viewcoder.liphin.com/#/project/my" id="7" name="Text_7"
               style="cursor: pointer;position: absolute;top: 13px; left: 363px; width: 54px; height: 31px; z-index:7; opacity:1; visibility: visible; font-size: 14px; font-weight: normal; font-family: microsoft yahei; font-style: normal; color: rgba(255,255,255,1.0); text-decoration: none; line-height: 150%; text-align: left; ">项目</a>
 
         <!--  基础文本组件:Text_8   Common_Text frame:Text_8  -->
-        <a href="http://beansonbar.com/#/purchase/instance" id="8" name="Text_8"
+        <a href="http://viewcoder.liphin.com/#/purchase/instance" id="8" name="Text_8"
               style="cursor: pointer;position: absolute;top: 13px; left: 429px; width: 54px; height: 31px; z-index:8; opacity:1; visibility: visible; font-size: 14px; font-weight: normal; font-family: microsoft yahei; font-style: normal; color: rgba(255,255,255,1.0); text-decoration: none; line-height: 150%; text-align: left; ">服务</a>
 
         <!--  基础文本组件:Text_9   Common_Text frame:Text_9  -->
-        <a href="http://beansonbar.com/#/personal/generalInfo" id="9" name="Text_9"
+        <a href="http://viewcoder.liphin.com/#/personal/generalInfo" id="9" name="Text_9"
               style="cursor: pointer;position: absolute;top: 13px; left: 491px; width: 76px; height: 31px; z-index:9; opacity:1; visibility: visible; font-size: 14px; font-weight: normal; font-family: microsoft yahei; font-style: normal; color: rgba(255,255,255,1.0); text-decoration: none; line-height: 150%; text-align: left; ">个人信息</a>
 
         <!--  基础文本组件:Text_13   Common_Text frame:Text_13  -->
@@ -47,7 +47,7 @@
 
         <!--  基础文本组件:Text_15   Common_Text frame:Text_15  -->
         <span id="15" name="Text_15"
-              style="position: absolute;top: 110px; left: 25px; width: 543px; height: 55px; z-index:15; opacity:1; visibility: visible; font-size: 14px; font-weight: normal; font-family: microsoft yahei; font-style: normal; color: rgba(125,125,125,1.0); text-decoration: none; line-height: 190%; text-align: left; ">&nbsp; &nbsp; &nbsp; 您有一个ViewCoder "<span style="color: rgba(34,142,231,1.0)">${service}</span>" 服务将于 "<span style="color: rgba(34,142,231,1.0)">${time}</span>" 正式到期，截止目前仅剩 <span style="color: rgba(34,142,231,1.0)">${day}</span> 天。到期后系统将为您保存项目快照，待续费后可重新正常访问资源。 详情请点击 <a href="http://beansonbar.com/#/purchase/instance" style="cursor: pointer;color: rgba(34,142,231,1.0); text-decoration: underline;">控制台</a> 查看
+              style="position: absolute;top: 110px; left: 25px; width: 543px; height: 55px; z-index:15; opacity:1; visibility: visible; font-size: 14px; font-weight: normal; font-family: microsoft yahei; font-style: normal; color: rgba(125,125,125,1.0); text-decoration: none; line-height: 190%; text-align: left; ">&nbsp; &nbsp; &nbsp; 您有一个ViewCoder "<span style="color: rgba(34,142,231,1.0)">${service}</span>" 服务将于 "<span style="color: rgba(34,142,231,1.0)">${time}</span>" 正式到期，截止目前仅剩 <span style="color: rgba(34,142,231,1.0)">${day}</span> 天。到期后系统将为您保存项目快照，待续费后可重新正常访问资源。 详情请点击 <a href="http://viewcoder.liphin.com/#/purchase/instance" style="cursor: pointer;color: rgba(34,142,231,1.0); text-decoration: underline;">控制台</a> 查看
         </span>
 
         <!--  基础文本组件:Text_18   Common_Text frame:Text_18  -->
